[tool.poetry]
name = "fastapi-sqlalchemy-alembic"
version = "0.1.0"
description = ""
authors = ["Quien Sabe <qs5779@mail.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
fastapi-sqlalchemy = "^0.2.1"
pydantic = {extras = ["mypy"], version = "^1.10.7"}
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
uvicorn = "^0.21.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.10"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.2.0"
pytest-cov = "^4.0.0"

[tool.isort]
skip = ["alembic", ".venv", ".gitignore", ".dockerignore", "attic"]

[tool.black]
target-version = ["py310"]
# include = ["./.*.py"]
force-exclude = """
alembic
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
